@@ -1,5 +1,7 @@
 [Changes 1.2.2]
 
+* Remove obsolete Chatnet 310 numeric support (WANT_CHATNET). (caf)
+
 * Rework the lag check to make it simpler and more reliable.  This adds
   a /set LAG_CHECK_INTERVAL to control the frequency of lag checks. (caf)
 
